--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="flex" id="project-list">
           <a target="_blank" href="fronkcartel.com" class="card">
             <div class="card-img">
-              <img src="img/nsb (Small).jpg" alt="NSB project img" />
+              <img src="img/nsb.jpg" alt="NSB project img" />
             </div>
             <div class="description">
               <h2 id="project-name">NSB</h2>
@@ -71,7 +71,7 @@
             </div>
           </a>
 
-          <a target="_blank" href="fronkcartel.com" class="card">
+          <a target="_blank" href="https://fronkcartel.com/" class="card">
             <div class="card-img">
               <img src="img/fronkcartel.com (Small).png" alt="" />
             </div>
@@ -177,7 +177,7 @@
     <footer>
       <div class="container">
 
-        <div>
+        <div class="term-service-anchor">
           <a href="term of use.html">Terms of sevice</a>
         </d>
 
