dogepunk added and about

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <nav>
         <ul>
           <li>
-            <a href="" class="active">Home</a>
+            <a href="#" class="active">Home</a>
           </li>
 
           <li>
-            <a href="#" class="secondary-active">ABOUT</a>
+            <a href="about.html" class="secondary-active">ABOUT</a>
           </li>
         </ul>
       </nav>
@@ -67,21 +67,21 @@
             </div>
             <div class="description">
               <h2 id="project-name">NSB</h2>
-              <p>Auto rarity checker by fronkcartel</p>
+              <p>rarity checker</p>
             </div>
           </a>
 
-          <a target="_blank" href="https://fronkcartel.com/" class="card">
+          <a target="_blank" href="https://www.fronkcartel.com/" class="card">
             <div class="card-img">
               <img src="img/fronkcartel.com (Small).png" alt="" />
             </div>
             <div class="description">
               <h2 id="project-name">Frontcartel</h2>
-              <p>10k fronks 8bn humans you do the math</p>
+              <p>10k fronks 8bn humans h</p>
             </div>
           </a>
 
-          <a target="_blank" href="fronkcartel.com" class="card">
+          <a target="_blank" href="https://fronkcartel.com/devs" class="card">
             <div class="card-img">
               <img src="img/devs.png" alt="" />
             </div>
@@ -91,9 +91,9 @@
             </div>
           </a>
 
-          <a target="_blank" href="fronkcartel.com" class="card">
+          <a target="_blank" href="https://market.minidogeart.com/collection.html?slug=ordinal-mini-doges&type=ordinals" class="card">
             <div class="card-img">
-              <img src="img/fronkcartel.com.png" alt="" />
+              <img src="img/minidoge.png" alt="MiniDoge img" />
             </div>
             <div class="description">
               <h2 id="project-name">MiniDoge</h2>
@@ -101,73 +101,36 @@
             </div>
           </a>
 
-          <a target="_blank" href="fronkcartel.com" class="card">
+          <a target="_blank" href="doginal-dragon.vercel.app" class="card">
             <div class="card-img">
-              <img src="img/fronkcartel.com.png" alt="" />
+              <img src="img/doginal-dragons.png" alt="Doginal Dragon img" />
             </div>
             <div class="description">
               <h2 id="project-name">Doginal Dragon</h2>
-              <p>Much Wow! Very early!</p>
+              <p>Dragon new year</p>
             </div>
           </a>
 
-          <a target="_blank" href="fronkcartel.com" class="card">
+          <a target="_blank" href="https://market.minidogeart.com/collection.html?slug=aperime&type=doginals" class="card">
             <div class="card-img">
-              <img src="img/fronkcartel.com.png" alt="" />
+              <img src="img/aperime.png" alt="aperime img" />
             </div>
             <div class="description">
               <h2 id="project-name">Aperime</h2>
-              <p>Much Wow! Very early!</p>
+              <p>3200 unique APEPRIME NFTs.</p>
             </div>
           </a>
 
-          <a target="_blank" href="fronkcartel.com" class="card">
-            <div class="card-img">
-              <img src="img/fronkcartel.com.png" alt="" />
-            </div>
-            <div class="description">
-              <h2 id="project-name">Natdogs</h2>
-              <p>Much Wow! Very early!</p>
-            </div>
-          </a>
+        
 
-          <a target="_blank" href="fronkcartel.com" class="card">
+     
+          <a target="_blank" href="dogecoinpunks.xyz" class="card">
             <div class="card-img">
-              <img src="img/fronkcartel.com.png" alt="" />
-            </div>
-            <div class="description">
-              <h2 id="project-name">NodeDoge</h2>
-              <p>Much Wow! Very early!</p>
-            </div>
-          </a>
-
-          <a target="_blank" href="fronkcartel.com" class="card">
-            <div class="card-img">
-              <img src="img/fronkcartel.com.png" alt="" />
-            </div>
-            <div class="description">
-              <h2 id="project-name">Dogibot</h2>
-              <p>Much Wow! Very early!</p>
-            </div>
-          </a>
-
-          <a target="_blank" href="fronkcartel.com" class="card">
-            <div class="card-img">
-              <img src="img/fronkcartel.com.png" alt="" />
-            </div>
-            <div class="description">
-              <h2 id="project-name">Pixel Doge</h2>
-              <p>Much Wow! Very early!</p>
-            </div>
-          </a>
-
-          <a target="_blank" href="fronkcartel.com" class="card">
-            <div class="card-img">
-              <img src="img/fronkcartel.com.png" alt="" />
+              <img src="img/dogecoinPunk.png" alt="dogecoin punk img" />
             </div>
             <div class="description">
               <h2 id="project-name">Dogecoin Punk</h2>
-              <p>Much Wow! Very early!</p>
+              <p>first byte-perfect uploaded</p>
             </div>
           </a>
         </div>
@@ -177,17 +140,23 @@
     <footer>
       <div class="container">
 
-        <div class="term-service-anchor">
-          <a href="term of use.html">Terms of sevice</a>
+        <div >
+          <a class="term-service-anchor" href="term of use.html">Terms of sevice</a>
         </d>
 
-        <p class="">
+        <p class="footer-text">
           Nsb rarity may charge listing fees and advertising fees for NFT
           collections. These fees are typically paid by NFT holders or creators.
           The platform is for informational purposes only and does not provide
           financial advice. Users should not rely on rarity scores or rankings
           for financial decisions.
         </p>
+
+
+        <p class="footer-text">
+          For listing and advertisement contact <a   href="">@emil</a> 
+        </p>
+
       </div>
     </footer>
   </body>
