--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 
         <p class="footer-text">
-          For listing and advertisement contact <a   href="">@emil</a> 
+          For listing and advertisement contact <a  class="contact-listing" href="">@emil</a> 
         </p>
 
       </div>
