--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main>
       <div class="container">
         <div class="flex" id="project-list">
-          <a target="_blank" href="fronkcartel.com" class="card">
+          <a target="_blank" href="#" class="card">
             <div class="card-img">
               <img src="img/nsb.jpg" alt="NSB project img" />
             </div>
@@ -101,7 +101,7 @@
             </div>
           </a>
 
-          <a target="_blank" href="doginal-dragon.vercel.app" class="card">
+          <a target="_blank" href="https://doginals-dragon.vercel.app/" class="card">
             <div class="card-img">
               <img src="img/doginal-dragons.png" alt="Doginal Dragon img" />
             </div>
@@ -124,7 +124,7 @@
         
 
      
-          <a target="_blank" href="dogecoinpunks.xyz" class="card">
+          <a target="_blank" href="https://dogecoinpunks.xyz/" class="card">
             <div class="card-img">
               <img src="img/dogecoinPunk.png" alt="dogecoin punk img" />
             </div>
