update card images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </div>
 
     <header>
-      <div class="logo">NSB RARITY</div>
+      <div class="logo">
+        <img class="logo-img" src="img/nsb.jpg" alt="">
+      </div>
       <input type="checkbox" id="nav_check" hidden />
       <nav>
         <ul>
@@ -77,13 +79,13 @@
             </div>
             <div class="description">
               <h2 id="project-name">Frontcartel</h2>
-              <p>10k fronks 8bn humans h</p>
+              <p>10k fronks 8bn humans </p>
             </div>
           </a>
 
           <a target="_blank" href="https://fronkcartel.com/devs" class="card">
             <div class="card-img">
-              <img src="img/devs.png" alt="" />
+              <img src="img/devs (Small).png" alt="" />
             </div>
             <div class="description">
               <h2 id="project-name">.Devs</h2>
@@ -154,7 +156,7 @@
 
 
         <p class="footer-text">
-          For listing and advertisement contact <a  class="contact-listing" href="">@emil</a> 
+          For listing and advertisement contact <a target="_blank"  class="contact-listing" href="https://t.me/emilianozapata4">@emil</a> 
         </p>
 
       </div>
