--- a/term of use.html
+++ b/term of use.html
@@ -23,7 +23,7 @@
           </li>
 
           <li>
-            <a href="#" class="secondary-active">ABOUT</a>
+            <a href="about.html" class="secondary-active">ABOUT</a>
           </li>
         </ul>
       </nav>
