--- a/term of use.html
+++ b/term of use.html
@@ -14,7 +14,9 @@
     </div>
 
     <header>
-      <div class="logo">NSB RARITY</div>
+      <div class="logo">
+        <img class="logo-img" src="img/nsb.jpg" alt="" />
+      </div>
       <input type="checkbox" id="nav_check" hidden />
       <nav>
         <ul>
