added a whole lot of drc projects

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
           </li>
 
           <li>
-            <a href="about.html" class="secondary-active">ABOUT</a>
+            <a href="about.html" class="secondary-active">About</a>
+          </li>
+          <li>
+            <a href="#" class="secondary-active">List your project</a>
           </li>
         </ul>
       </nav>
@@ -125,16 +128,139 @@
 
         
 
-     
-          <a target="_blank" href="https://dogecoinpunks.xyz/" class="card">
+          <a target="_blank" href="#" class="card">
             <div class="card-img">
-              <img src="img/dogecoinPunk.png" alt="dogecoin punk img" />
+              <p class="soon">soon</p>
+              <img src="img/Doginal Ape Yacht Club.webp" alt="dogecoin punk img" />
+            </div>
+            <div class="description">
+              <h2 id="project-name">Doginal Ape Yacht Club</h2>
+              <p>Doginal Ape Yacht Club are pixelated NFT art of unique collectible of Stylish Apes
+                .</p>
+            </div>
+          </a>
+
+
+          <a target="_blank" href="#" class="card">
+            <div class="card-img">
+              <p class="soon">soon</p>
+              <img src="img/Memepups.webp" alt="dogecoin punk img" />
+            </div>
+            <div class="description">
+              <h2 id="project-name">Memepups</h2>
+              <p>MemePups - Welcome to the very First NFT Collection on Dogechain, where every Single Piece of Art is a 1 of 1 Handmade. No Attributes, no doubles - 2828 Unique NFTs.</p>
+            </div>
+          </a>
+
+          <a target="_blank" href="#" class="card">
+            <div class="card-img">
+              <p class="soon">soon</p>
+              <img src="img/dogesmoke.jpg" alt="dogecoin punk img" />
+            </div>
+            <div class="description">
+              <h2 id="project-name">Doge Smokes</h2>
+              <p>420 Smokes chilling on the Doge Blockchain. Part of @ordinalsnft Project.</p>
+            </div>
+          </a>
+
+
+          <a target="_blank" href="#" class="card">
+            <div class="card-img">
+              <p class="soon">soon</p>
+              <img src="img/doginal toadz.png" alt="Doginal Toadz img" />
+            </div>
+            <div class="description">
+              <h2 id="project-name">Doginal Toadz</h2>
+              <p>Doginal Toadz are small amphibious creatures that roam the swampy basin of Doginals world.</p>
+            </div>
+          </a>
+
+
+          <a target="_blank" href="#" class="card">
+            <div class="card-img">
+              <p class="soon">soon</p>
+              <img src="img/Doginal Maxi Biz.jpg" alt="Doginal Maxi Biz img" />
+            </div>
+            <div class="description">
+              <h2 id="project-name">Doginal Maxi Biz</h2>
+              <p>-.. --- --. .. -. .- .-.. / -- .- -..- .. / -... .. --.. / < .-- --- .-- > -.. -- -... -.--.-.</p>
+            </div>
+          </a>
+
+
+          <a target="_blank" href="#" class="card">
+            <div class="card-img">
+              <p class="soon">soon</p>
+              <img src="img/Dogecoin Rocks.png" alt="Dogecoin Rocks img" />
+            </div>
+            <div class="description">
+              <h2 id="project-name">Natdogs</h2>
+              <p>Second-ever doginals collection.</p>
+            </div>
+          </a>
+
+
+          <a target="_blank" href="#" class="card">
+            <div class="card-img">
+              <p class="soon">soon</p>
+              <img src="img/Doginal Doge House.jpg" alt="Doginal Doge Houseimg" />
+            </div>
+            <div class="description">
+              <h2 id="project-name">Doginal Doge House</h2>
+              <p>“THE FIRST DRC-20 INSCRIBED HOUSE COLLECTION” 1 of 1 DOGINAL DOGE HOUSES Created by @Zahfromtheblock .</p>
+            </div>
+          </a>
+
+
+          <a target="_blank" href="#" class="card">
+            <div class="card-img">
+              <p class="soon">soon</p>
+              <img src="img/Pixel Doge.png" alt="Pixel Doge img" />
+            </div>
+            <div class="description">
+              <h2 id="project-name">Pixel Doge</h2>
+              <p>The first ever airdrop on the drc20 doginals. 2,420 much rare Pixel Doges airdropped to holders Bm2k "very beta".</p>
+            </div>
+          </a>
+
+
+          <a target="_blank" href="#" class="card">
+            <div class="card-img">
+              <p class="soon">soon</p>
+              <img src="img/The Doge Mooners.png" alt="The Doge Mooners img" />
+            </div>
+            <div class="description">
+              <h2 id="project-name">Natdogs</h2>
+              <p>One cartel is not enough.</p>
+            </div>
+          </a>
+
+
+          <a target="_blank" href="#" class="card">
+            <div class="card-img">
+              <p class="soon">soon</p>
+              <img src="img/natdogs.png" alt="dogecoin punk img" />
+            </div>
+            <div class="description">
+              <h2 id="project-name">Natdogs</h2>
+              <p>First non-arbitrary art collection on Dogecoin.</p>
+            </div>
+          </a>
+
+
+          <a target="_blank" href="#" class="card">
+            <div class="card-img">
+              <p class="soon">soon</p>
+              <img src="img/doginal dog.png" alt="dogecoin punk img" />
             </div>
             <div class="description">
               <h2 id="project-name">Dogecoin Punk</h2>
-              <p>first byte-perfect uploaded</p>
+              <p>10,000 Distinctive Pixel Dogs inscribed on the Doge Blockchain </p>
             </div>
           </a>
+
+
+
         </div>
       </div>
     </main>
@@ -155,9 +281,9 @@
         </p>
 
 
-        <p class="footer-text">
+        <!-- <p class="footer-text">
           For listing and advertisement contact <a target="_blank"  class="contact-listing" href="https://t.me/emilianozapata4">@emil</a> 
-        </p>
+        </p> -->
 
       </div>
     </footer>
