responsiveness and corrections

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <div class="description">
               <h2 id="project-name">Frontcartel</h2>
-              <p>10k fronks 8bn humans </p>
+              <p>10k fronks 8bn humans you do the math.</p>
             </div>
           </a>
 
@@ -92,7 +92,7 @@
             </div>
             <div class="description">
               <h2 id="project-name">.Devs</h2>
-              <p>Be a dev</p>
+              <p>we are all .devs</p>
             </div>
           </a>
 
@@ -102,7 +102,7 @@
             </div>
             <div class="description">
               <h2 id="project-name">MiniDoge</h2>
-              <p>Much Wow! Very early!</p>
+              <p>Much Wow! Very early! Starting shibescription 14578! Woof!</p>
             </div>
           </a>
 
@@ -112,7 +112,7 @@
             </div>
             <div class="description">
               <h2 id="project-name">Doginal Dragon</h2>
-              <p>Dragon new year</p>
+              <p>Gruuu ! Dragon Year Dragon Moon Collection Luna Year 2024 Year Of The Dragon🐲!</p>
             </div>
           </a>
 
@@ -122,7 +122,7 @@
             </div>
             <div class="description">
               <h2 id="project-name">Aperime</h2>
-              <p>3200 unique APEPRIME NFTs.</p>
+              <p>3200 unique APEPRIME NFTs in #DRC20 network. Get ready to witness APEPRIME, the hilarious disruptor that's turning on its head.</p>
             </div>
           </a>
 
@@ -131,7 +131,7 @@
           <a target="_blank" href="#" class="card">
             <div class="card-img">
               <p class="soon">soon</p>
-              <img src="img/Doginal Ape Yacht Club.webp" alt="dogecoin punk img" />
+              <img src="img/Doginal Ape Yacht Club.webp" alt="Doginal Ape Yacht Club img" />
             </div>
             <div class="description">
               <h2 id="project-name">Doginal Ape Yacht Club</h2>
@@ -144,7 +144,7 @@
           <a target="_blank" href="#" class="card">
             <div class="card-img">
               <p class="soon">soon</p>
-              <img src="img/Memepups.webp" alt="dogecoin punk img" />
+              <img src="img/Memepups.webp" alt="Memepups img" />
             </div>
             <div class="description">
               <h2 id="project-name">Memepups</h2>
@@ -155,7 +155,7 @@
           <a target="_blank" href="#" class="card">
             <div class="card-img">
               <p class="soon">soon</p>
-              <img src="img/dogesmoke.jpg" alt="dogecoin punk img" />
+              <img src="img/dogesmoke.jpg" alt="Doge Smokes img" />
             </div>
             <div class="description">
               <h2 id="project-name">Doge Smokes</h2>
@@ -194,7 +194,7 @@
               <img src="img/Dogecoin Rocks.png" alt="Dogecoin Rocks img" />
             </div>
             <div class="description">
-              <h2 id="project-name">Natdogs</h2>
+              <h2 id="project-name">Dogecoin Rocks</h2>
               <p>Second-ever doginals collection.</p>
             </div>
           </a>
@@ -230,7 +230,7 @@
               <img src="img/The Doge Mooners.png" alt="The Doge Mooners img" />
             </div>
             <div class="description">
-              <h2 id="project-name">Natdogs</h2>
+              <h2 id="project-name">The Doge Mooners</h2>
               <p>One cartel is not enough.</p>
             </div>
           </a>
@@ -239,7 +239,7 @@
           <a target="_blank" href="#" class="card">
             <div class="card-img">
               <p class="soon">soon</p>
-              <img src="img/natdogs.png" alt="dogecoin punk img" />
+              <img src="img/natdogs.png" alt="Natdogs img" />
             </div>
             <div class="description">
               <h2 id="project-name">Natdogs</h2>
@@ -251,10 +251,10 @@
           <a target="_blank" href="#" class="card">
             <div class="card-img">
               <p class="soon">soon</p>
-              <img src="img/doginal dog.png" alt="dogecoin punk img" />
+              <img src="img/doginal dog.png" alt="doginal dog img" />
             </div>
             <div class="description">
-              <h2 id="project-name">Dogecoin Punk</h2>
+              <h2 id="project-name">doginal dog</h2>
               <p>10,000 Distinctive Pixel Dogs inscribed on the Doge Blockchain </p>
             </div>
           </a>
