--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
     </div>
 
     <header>
-      <div class="logo">
+      <a href="index.html" class="logo">
         <img class="logo-img" src="img/nsb.jpg" alt="" />
-      </div>
+      </a>
       <input type="checkbox" id="nav_check" hidden />
       <nav>
         <ul>
